fix: footer icon alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,8 +53,8 @@ html, body {
   }
 
   a {
-    padding: $spacing-2x;
     border: none;
+    margin-right: $spacing-2x;
   }
 
   .copyright {
